
	- fix #1208464 Charset selection

	- rfe #1276721 Support for External buddies

	- support for DH RC2/128 channel and login encryption

	- re-introduced support for idle times

	- rfe #1307892 Support for Announcements

	- fix for crash in adding multi-resolved buddies

	- added "Synchronize with Server" buddy list option

	- fix #1218284 meanwhile ignores ICT chat invites
	
version 1.2.4 (2004-07-14)

	- fix #1220550 gaim-meanwhile hangs when redirecting to Sametime
	server
	
	- fix problem parsing 8bit parts in MIME messages

	- fix #1232922 status not applied on auto-reconnect
	
	- fix #1120347 Win32 gaim-meanwhile disconnects (error in read
	callback)
	
	- rfe #1199253 Aliases clobber with Notes Address Book (added
	option to not mark NAB group buddies as transient, so that they'll
	save between Gaim sessions)

	- fix tooltip rendering bug for status messages with tag-like text
	
version 1.2.3 (2005-05-27)
	
	- building against meanwhile 0.4.2

	- rfe #1199253 Aliases clobber with Notes Address Book (added
	resolve hook to end of buddy add from NAB groups)
	
	- rfe #1054813 privacy support (allow all, allow list, deny all,
	deny list, allow buddy list)

	- fix #1194631 Windows file transfer crashes gaim
	
	- fix #1178603 crash on duplicate ldap entries (add buddy)

	- added "Invite to Conference..." context menu

	- don't reset conversation features when remote closes
	conversation; prevents sending of formatted messages as plaintext.

	- rfe #1203358 release info... (added version/credits to plugin
	preferences pane)
	
version 1.2.2 (2005-05-02)

	- fix #1193994 startup crash, whitespace status messages
	
version 1.2.1 (2005-05-01)

	- building against meanwhile 0.4.1

	- removed username split for Server, moving it back to an account
	setting. This should fix log location the way it was pre-1.2.0

	- support for sending NotesBuddy-style images
	
	- support for sending/receiving files over the File Transfer
	service
	